--- a/src/test/003.html
+++ b/src/test/003.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html
   LANG="en">
 <head>
@@ -15,5 +16,13 @@
 		<span id="dupl">duplicated</span>
 	</p>
 
-</body>
+	<p>
+		Illegal &("> <'')&
+		<br />
+		characters &amp;(&quot;&gt; &lt;'')&amp;
+		<img src="path/to" alt='&("> <")& &amp;(&quot;&gt; &lt;&quot;)&amp;'>
+	</p>
+
+	EOD
+	</body>
 </html>
