--- a/src/test/003.html
+++ b/src/test/003.html
@@ -20,7 +20,7 @@
 		Illegal &("> <'')&
 		<br />
 		characters &amp;(&quot;&gt; &lt;'')&amp;
-		<img src="path/to" alt='&("> <")& &amp;(&quot;&gt; &lt;&quot;)&amp;'>
+		<img src="path/to" alt='&("<")& &amp;(&quot;&gt; &lt;&quot;)&amp;'>
 	</p>
 
 	EOD
