--- a/src/test/003.html
+++ b/src/test/003.html
@@ -26,6 +26,10 @@
 	<p>ホ゜ケットモンスター</p>
 	<font color="red">非推奨要素</font>
 
+	<a href="path/to" role="button">link1</a>
+	<a href="path/to" role="document">link2</a>
+	<label role="button"><input type="text" ></label>
+
 	EOD
 	</body>
 </html>
