--- a/src/test/003.html
+++ b/src/test/003.html
@@ -29,6 +29,10 @@
 	<a href="path/to" role="button">link1</a>
 	<a href="path/to" role="document">link2</a>
 	<label role="button"><input type="text" ></label>
+	<img src="path/to">
+	<img src="path/to" />
+	<div>
+	<div />
 
 	EOD
 	</body>
