fix HTML Parser

--- a/src/test/003.html
+++ b/src/test/003.html
@@ -31,8 +31,6 @@
 	<label role="button"><input type="text" ></label>
 	<img src="path/to">
 	<img src="path/to" />
-	<div>
-	<div />
 			   invalid-indent
 
 	<?template engine;
@@ -42,6 +40,9 @@
 	<%template engine;
 		$var = '<html attr="value">text</html>'
 	%>
+
+	</expected>
+	<div>
 
 	EOD
 	</body>
