--- a/test/003.html
+++ b/test/003.html
@@ -6,9 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv = "X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
+	<script src="/path/to/js/lib/jquery.min.js"></script>
+	<script src="/path/to/js/main.js" async></script>
 </head>
 <body>
-	<DIV class="a-b-c">
+	<DIV
+		class = "a-b-c">
 		<p>lorem</p>
 	</DIV>
 
