--- a/test/003.html
+++ b/test/003.html
@@ -2,9 +2,12 @@
 <html
   LANG="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv = "X-UA-Compatible" content="ie=edge">
+	<meta charset=UTF-8>
+	<meta name  =viewport content
+	=
+
+	"width=device-width, initial-scale=1.0">
+	<meta http-equiv = "X-UA-Compatible" content=ie=edge>
 	<title>Document</title>
 	<script src="/path/to/js/lib/jquery.min.js"></script>
 	<script src="/path/to/js/main.js" async></script>
