--- a/test/fixture/003.html
+++ b/test/fixture/003.html
@@ -35,7 +35,7 @@
 	<a href="path/to" role="button">link1</a>
 	<a href="path/to" role="document">link2</a>
 	<label role="button"><input type="text" ></label>
-	<img src="path/to">
+	<img src="path/to" align="top">
 	<img src="path/to" />
 			   invalid-indent
 
