Changed code partial from JS to TS for the website.

--- a/website/index.html
+++ b/website/index.html
@@ -35,7 +35,7 @@
 				width: 950px;
 				margin: 0 auto;
 			}
-			#main {
+			#playground {
 				width: 950px;
 				height: 500px;
 				margin: 0 0 2em;
@@ -133,7 +133,7 @@
 			<section>
 				<div>
 					<h2>Playground</h2>
-					<div id="main"></div>
+					<div id="playground"></div>
 				</div>
 			</section>
 		</main>
@@ -186,7 +186,7 @@
 			</div>
 		</footer>
 
-		<script src="monaco-editor/min/vs/loader.js"></script>
-		<script async src="resources/main.js"></script>
+		<script src="monaco-editor/min/vs/loader.js" defer></script>
+		<script src="resources/main.js" defer></script>
 	</body>
 </html>
