--- a/website/index.html
+++ b/website/index.html
@@ -186,7 +186,6 @@
 			</div>
 		</footer>
 
-		<script src="monaco-editor/min/vs/loader.js" defer></script>
-		<script src="resources/main.js" defer></script>
+		<script src="scripts/main.js" defer></script>
 	</body>
 </html>
