--- a/website/index.html
+++ b/website/index.html
@@ -39,6 +39,7 @@
 				width: 950px;
 				height: 500px;
 				margin: 0 0 2em;
+				background: #000;
 			}
 			header {
 				padding: 2em 0;
@@ -124,7 +125,7 @@
 	<body>
 		<header>
 			<div>
-				<h1><img src="media/logo.svg" alt="markuplint" /></h1>
+				<h1><img src="media/logo.svg" width="200" height="134" alt="markuplint" /></h1>
 				<p>HTML linter for legacy/modern HTML, Web Components, SVG, MathML, AMP HTML and more.</p>
 			</div>
 		</header>
