Update permitted content of the legend element that allows containing heading elements.

--- a/test/fixture/005.html
+++ b/test/fixture/005.html
@@ -73,5 +73,12 @@
 		<ol>
 			<div></div>
 		</ol>
+
+		<fieldset>
+			<legend>
+				<h3></h3>
+				<span></span>
+			</legend>
+		</fieldset>
 	</body>
 </html>
