Added test code for checking through an editor.

--- a/test/fixture/005.html
+++ b/test/fixture/005.html
@@ -33,6 +33,24 @@
 			<source />
 		</audio>
 
+		<audio>
+			<source />
+			<p></p>
+		</audio>
+
+		<video>
+			<source src="path/to" />
+		</video>
+
+		<picture>
+			<source />
+			<img src="path/to" />
+		</picture>
+
+		<picture>
+			<source />
+		</picture>
+
 		<button>
 			<input />
 		</button>
