Add an explain and an example for the wai-aria rule to docs.

--- a/test/fixture/007.html
+++ b/test/fixture/007.html
@@ -13,5 +13,9 @@
 		<a href role="link"></a>
 		<div aria-atomic="foo"></div>
 		<div aria-atomic="true"></div>
+		<img src="path/to" alt="text" role="img" />
+		<img src="path/to.svg" alt="text" />
+		<img src="path/to.svg" alt="text" role="button" />
+		<img src="path/to.svg" alt="text" role="img" />
 	</body>
 </html>
