--- a/test/fixture/007.html
+++ b/test/fixture/007.html
@@ -17,5 +17,19 @@
 		<img src="path/to.svg" alt="text" />
 		<img src="path/to.svg" alt="text" role="button" />
 		<img src="path/to.svg" alt="text" role="img" />
+		<div class="ignore">
+			<div role="alert"></div>
+			<div role="button"></div>
+			<div role="foo"></div>
+			<div role="roletype"></div>
+			<a href role="document"></a>
+			<a href role="link"></a>
+			<div aria-atomic="foo"></div>
+			<div aria-atomic="true"></div>
+			<img src="path/to" alt="text" role="img" />
+			<img src="path/to.svg" alt="text" />
+			<img src="path/to.svg" alt="text" role="button" />
+			<img src="path/to.svg" alt="text" role="img" />
+		</div>
 	</body>
 </html>
