--- a/test/fixture/007.html
+++ b/test/fixture/007.html
@@ -5,6 +5,7 @@
 	</head>
 	<body role="document">
 		<h1 role="heading"></h1>
+		<div role="heading"></div>
 		<div role="alert"></div>
 		<div role="button"></div>
 		<div role="foo"></div>
@@ -17,6 +18,24 @@
 		<img src="path/to.svg" alt="text" />
 		<img src="path/to.svg" alt="text" role="button" />
 		<img src="path/to.svg" alt="text" role="img" />
+		<input type="checkbox" checked aria-checked="true" />
+		<input type="checkbox" checked aria-checked="mixed" />
+		<input type="checkbox" checked aria-checked="false" />
+		<input type="checkbox" aria-checked="true" />
+		<input type="checkbox" aria-checked="mixed" />
+		<input type="checkbox" aria-checked="false" />
+		<input type="radio" checked aria-checked="true" />
+		<input type="radio" checked aria-checked="mixed" />
+		<input type="radio" checked aria-checked="false" />
+		<input type="radio" aria-checked="true" />
+		<input type="radio" aria-checked="mixed" />
+		<input type="radio" aria-checked="false" />
+		<input type="button" role="switch" checked aria-checked="true" />
+		<input type="button" role="switch" checked aria-checked="mixed" />
+		<input type="button" role="switch" checked aria-checked="false" />
+		<input type="button" role="switch" aria-checked="true" />
+		<input type="button" role="switch" aria-checked="mixed" />
+		<input type="button" role="switch" aria-checked="false" />
 		<div class="ignore">
 			<div role="alert"></div>
 			<div role="button"></div>
