--- a/test/fixture/001.html
+++ b/test/fixture/001.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" media="(prefers-color-scheme: light)" content="red">
+	<meta name="theme-color" media="(prefers-color-scheme: dark)" content="darkred">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 </head>
