Update the playground.

--- a/playground/src/pages/index.html
+++ b/playground/src/pages/index.html
@@ -55,9 +55,10 @@
 						<a
 							href="https://marketplace.visualstudio.com/items?itemName=yusukehirao.vscode-markuplint"
 							target="_blank"
+							rel="noreferrer"
 						>
 							<figure>
-								<img src="./media/vscode.png" alt="" height="140" decoding="async" />
+								<img src="./media/vscode.png" alt="" width="903" height="987" decoding="async" />
 								<figcaption>Visual Studio Code</figcaption>
 							</figure>
 						</a>
@@ -70,7 +71,7 @@
 			<div>
 				<ul>
 					<li>
-						<a href="https://github.com/markuplint/markuplint" target="_blank">
+						<a href="https://github.com/markuplint/markuplint" target="_blank" rel="noreferrer">
 							<svg width="24" height="24" viewBox="0 0 24 24" aria-label="Github">
 								<path
 									fill="currentColor"
@@ -80,7 +81,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="https://twitter.com/markuplint" target="_blank">
+						<a href="https://twitter.com/markuplint" target="_blank" rel="noreferrer">
 							<svg width="24" height="24" viewBox="0 0 24 24" aria-label="Twitter">
 								<path
 									fill="currentColor"
