Update brand and styles.

--- a/playground/src/pages/index.html
+++ b/playground/src/pages/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=1000" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>markuplint</title>
+		<title>Markuplint</title>
 		<meta
 			name="description"
 			content="HTML linter for legacy/modern HTML, Web Components, SVG, MathML, AMP HTML and more."
@@ -29,12 +29,12 @@
 						src="./media/logo.svg"
 						width="200"
 						height="134"
-						alt="markuplint"
+						alt="Markuplint"
 						decoding="async"
 						loading="lazy"
 					/>
 				</h1>
-				<p>HTML linter for legacy/modern HTML, Web Components, SVG, MathML, AMP HTML and more.</p>
+				<p><em>Peace of mind in your markup</em> - <span>A linter for all markup developers.</span></p>
 			</div>
 		</header>
 
