Add a test code.

--- a/test/fixture/007.html
+++ b/test/fixture/007.html
@@ -36,6 +36,13 @@
 		<input type="button" role="switch" aria-checked="true" />
 		<input type="button" role="switch" aria-checked="mixed" />
 		<input type="button" role="switch" aria-checked="false" />
+		<select required>
+			<optgroup label="Group">
+				<option value="">Placeholder</option>
+			</optgroup>
+			<option value="option1">Option 1</option>
+			<option value="option2">Option 2</option>
+		</select>
 		<div class="ignore">
 			<div role="alert"></div>
 			<div role="button"></div>
