Update Popover API

--- a/test/fixture/013.html
+++ b/test/fixture/013.html
@@ -1,15 +1,27 @@
 <div id="p1" popover="auto">Popover UI</div>
 
-<button type="button" popovertoggletarget="p1">Toggle Button</button>
+<button type="button" popovertarget="p1">Toggle Button</button>
 
 <div id="p2" popover="auto">Popover UI</div>
 
-<button type="button" popovertoggletarget="p2">Toggle Button</button>
+<button type="button" popovertarget="p2">Toggle Button</button>
 
 <div id="p3" popover="auto">Popover UI</div>
 
-<button type="button" popovertoggletarget="p_3">`no-refer-to-non-existent-id`</button>
+<button type="button" popovertarget="p_3">`no-refer-to-non-existent-id`</button>
 
 <div id="p4" popup="auto">Popup UI</div>
 
-<button type="button" popuptoggletarget="p4">Toggle Button</button>
+<button type="button" popuptarget="p4">Toggle Button</button>
+
+<div id="p5" popover="auto">Popover UI</div>
+
+<button type="button" popovertoggletarget="p5">Obsolete Attribute</button>
+
+<div id="p6" popover="auto">Popover UI</div>
+
+<button type="button" popovertarget="p6" popovertargetaction="show">Show Only</button>
+
+<div id="p7" popover="auto">Popover UI</div>
+
+<button type="button" popovertarget="p7" popovertargetaction="open">Invalid Action</button>
