Add "HTML" to the description

--- a/playground/src/pages/index.html
+++ b/playground/src/pages/index.html
@@ -34,7 +34,7 @@
 						loading="lazy"
 					/>
 				</h1>
-				<p><em>Peace of mind in your markup</em> - <span>A linter for all markup developers.</span></p>
+				<p><em>Peace of mind in your markup</em> - <span>An HTML linter for all markup developers.</span></p>
 			</div>
 		</header>
 
