Fix to warn disallowed combination of ARIA prop/state with an element.

--- a/test/fixture/007.html
+++ b/test/fixture/007.html
@@ -12,6 +12,7 @@
 		<div role="roletype"></div>
 		<a href role="document"></a>
 		<a href role="link"></a>
+		<a href aria-disabled="true"></a>
 		<div aria-atomic="foo"></div>
 		<div aria-atomic="true"></div>
 		<img src="path/to" alt="text" role="img" />
