--- a/playground/src/examples/01-presets/01-recommended/code.html
+++ b/playground/src/examples/01-presets/01-recommended/code.html
@@ -3,8 +3,7 @@
 	<body>
 		<button disabled disabled>attr-duplication</button>
 
-		<h2 align="center">deprecated-attr</h2>
-		<font color="red">deprecated-element</font>
+		<font color="red">deprecated-element and deprecated-attr</font>
 
 		<p id="duplicated">duplicated-id</p>
 		<p id="duplicated">duplicated-id</p>
