--- a/playground/src/examples/01-presets/02-recommended-static-html/code.html
+++ b/playground/src/examples/01-presets/02-recommended-static-html/code.html
@@ -5,8 +5,7 @@
 
 		<button disabled disabled>attr-duplication</button>
 
-		<h2 align="center">deprecated-attr</h2>
-		<font color="red">deprecated-element</font>
+		<font color="red">deprecated-element and deprecated-attr</font>
 
 		<p id="duplicated">duplicated-id</p>
 		<p id="duplicated">duplicated-id</p>
